Replace CookiesTreeModel with CookieManager in WebsiteSettingsPreference

The SiteDataDeleteHelper in WebsiteSettingsPreferences is only used to
delete cookies but creates a CookiesTreeModel for various data types.
Instead, we can use CookieManager directly to fetch and delete cookies.

Bug: 883701
Change-Id: I08efb5d1e4d96902c9f018ca673a019f1334d2a8
Reviewed-on: https://chromium-review.googlesource.com/c/1337617
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Theresa <twellington@chromium.org>
Commit-Queue: Christian Dullweber <dullweber@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609629}
Former-commit-id: 582374a82a4ba13f289fe3a0a99336fde9504ce9